--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>To live is to fight, to fight is to live!</h1>
     <table>
@@ -16,30 +18,63 @@
             </tr>
         </thead>
         <tr>
-            <td id="ken"></td>
-            <td id="chunli"></td>
-            <td id="zangief"></td>
-            <td id="dhalsim"></td>
+            <td id="ken">
+                <p>ken</p>
+            </td>
+            <td id="chunli">
+                <p>chun li</p>
+            </td>
+            <td id="zangief">
+                <p>zangief</p>
+            </td>
+            <td id="dhalsim">
+                <p>dhalsim</p>
+            </td>
         </tr>
         <tr>
-            <td id="ryu"></td>
-            <td id="ehonda"></td>
-            <td id="blanka"></td>
-            <td id="guille"></td>
+            <td id="ryu">
+                <p>ryu</p>
+            </td>
+            <td id="ehonda">
+                <p>e honda</p>
+            </td>
+            <td id="blanka">
+                <p>blanka</p>
+            </td>
+            <td id="guille">
+                <p>guille</p>
+            </td>
         </tr>
         <tr>
-            <td id="thawk"></td>
-            <td id="feilong"></td>
-            <td id="deejay"></td>
-            <td id="cammy"></td>
+            <td id="thawk">
+                <p>thawk</p>
+            </td>
+            <td id="feilong">
+                <p>feilong</p>
+            </td>
+            <td id="deejay">
+                <p>dee jay</p>
+            </td>
+            <td id="cammy">
+                <p>cammy</p>
+            </td>
         </tr>
         <tr>
-            <td id="ballrog"></td>
-            <td id="vega"></td>
-            <td id="sagat"></td>
-            <td id="mbison"></td>
+            <td id="ballrog">
+                <p>balrog</p>
+            </td>
+            <td id="vega">
+                <p>vega</p>
+            </td>
+            <td id="sagat">
+                <p>sabat</p>
+            </td>
+            <td id="mbison">
+                <p>m bison</p>
+            </td>
         </tr>
     </table>
+    <h2>Formulario de Inscripción para jugar a Street Figther</h2>
     <form name="Formulario1" action="mailto:davidluis2436@gmail.com" method="post" enctype="multipart/form-data">
         <fieldset>
             <legend>Datos personales</legend>
@@ -64,4 +99,5 @@
         </fieldset>
     </form>
 </body>
+
 </html>
