--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
                     <input type="text" name="Ciudad" placeholder="Ciudad">
                 </div>
             </div>
+            <label for="nick">Nick</label>
+            <input type="text" name="nick">
+            <label for="correo">Correo Electrónico</label>
+            <input type="email" name="correo">
         </fieldset>
         <fieldset>
             <legend>sexo usuario</legend>
@@ -146,6 +150,10 @@
             <legend>Comentarios</legend>
             <textarea name="comentarios" id="" rows="10"></textarea>
         </fieldset>
+        <div id="botones">
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Borrar">
+        </div>
     </form>
 </body>
 
